--- a/NEWRESuME.html
+++ b/NEWRESuME.html
@@ -32,14 +32,14 @@
 
 <h1> RESUME</h1>
 <p>PDF FILE</p>
-<a href="chanresume.pdf" title="--RESUME--">--RESUME--</a>
+<a href="NEWRESuME.docx" title="--RESUME--">--RESUME--</a>
 
     <div class="FOOT">
     
 	    <footer>
            
            <h4>Created by --CHANDRU</h4>
-	       <p> Copy Rights Reserved @2020 </p>
+	       <p> Copy Rights Reserved @2021 </p>
         </footer>
     </div>
 </div>
