--- a/NEWRESuME.html
+++ b/NEWRESuME.html
@@ -23,7 +23,7 @@
 	          <a href="image.html" title="HOME" target="_self" >HOME</a>
 	          <a href="project.html" title="PROJECT" target="_self"> PROJECT</a>
 	          <a href="skill.html" title="SKILLS" target="_self"> SKILLS</a>
-	          <a href="resume.html" title="RESUME" target="_self"> RESUME</a>
+	          <a href="NEWRESuME.html" title="RESUME" target="_self"> RESUME</a>
 	          <a href="contact.html" title="CONTACT" target="_self"> CONTACT</a>
           </div>
   </div>
@@ -32,7 +32,7 @@
 
 <h1> RESUME</h1>
 <p>PDF FILE</p>
-<a href="https://github.com/chandrusanthanam/funnyWebsite/blob/gh-pages/NEWRESuME.docx" title="--RESUME--">--RESUME--</a>
+<a href="NEWRESuME.docx" title="--RESUME--">--RESUME--</a>
 
     <div class="FOOT">
     
