--- a/NEWRESuME.html
+++ b/NEWRESuME.html
@@ -32,7 +32,7 @@
 
 <h1> RESUME</h1>
 <p>PDF FILE</p>
-<a href="NEWRESuME.docx" title="--RESUME--">--RESUME--</a>
+<a href="CHANDRU-RESUME.pdf" title="--RESUME--">--RESUME--</a>
 
     <div class="FOOT">
     
