--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
 	          <a href="image.html" title="HOME" >HOME</a>
 	          <a href="project.html" title="PROJECT" target="_self"> PROJECT</a>
 	          <a href="skill.html" title="SKILLS" target="_self"> SKILLS</a>
-	          <a href="resume.html" title="RESUME" target="_self"> RESUME</a>
+	          <a href="NEWRESuME.html" title="RESUME" target="_self"> RESUME</a>
 	          <a href="contact.html" title="CONTACT" target="_self"> CONTACT</a>
           </div>
   </div>
