--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	          <a href="#Home" title="HOME" >HOME</a>
 	          <a href="project.html" title="PROJECT" target="_blank"> PROJECT</a>
 	          <a href="skill.html" title="SKILLS" target="_blank"> SKILLS</a>
-	          <a href="resume.html" title="RESUME" target="_blank"> RESUME</a>
+	          <a href="NEWRESuME.html" title="RESUME" target="_blank"> RESUME</a>
 	          <a href="contact.html" title="CONTACT" target="_blank"> CONTACT</a>
           </div>
   </div>
